# MRI_eval

./: .gitignore  LICENSE  MRI_Visualization.ipynb  MRI_yabplot_test.ipynb  README.md  fMRI_prep.ipynb  main.py  pyproject.toml  tribev2_requirements.txt
Notebooks/: fMRI_prep.ipynb  tribe_visualize.ipynb
_data/ADNI/002_S_5178/Accelerated_Sagittal_MPRAGE__MSV21_/2025-12-03_09_14_01.0/I11503312/: ADNI_002_S_5178_MR_Accelerated_Sagittal_MPRAGE_(MSV21)__br_raw_20251205185808618_62.dcm  ADNI_002_S_5178_MR_Accelerated_Sagittal_MPRAGE_(MSV21)__br_raw_20251205185808719_63.dcm  ADNI_002_S_5178_MR_Accelerated_Sagittal_MPRAGE_(MSV21)__br_raw_20251205185808798_195.dcm  ADNI_002_S_5178_MR_Accelerated_Sagittal_MPRAGE_(MSV21)__br_raw_20251205185808989_98.dcm  ADNI_002_S_5178_MR_Accelerated_Sagittal_MPRAGE_(MSV21)__br_raw_20251205185809056_55.dcm  ADNI_002_S_5178_MR_Accelerated_Sagittal_MPRAGE_(MSV21)__br_raw_20251205185809123_12.dcm  ADNI_002_S_5178_MR_Accelerated_Sagittal_MPRAGE_(MSV21)__br_raw_20251205185809191_160.dcm  ADNI_002_S_5178_MR_Accelerated_Sagittal_MPRAGE_(MSV21)__br_raw_20251205185809255_187.dcm  ADNI_002_S_5178_MR_Accelerated_Sagittal_MPRAGE_(MSV21)__br_raw_20251205185809329_152.dcm  ADNI_002_S_5178_MR_Accelerated_Sagittal_MPRAGE_(MSV21)__br_raw_20251205185809389_128.dcm  (+198 more)
processed_data/exploded_surfaces/: CSF.surf.gii
processed_data/patient_surfaces/: Tissue_Class_1.surf.gii
processed_data/structural_surface/: PatientBrain.surf.gii
scripts/: predict_audio_only.py  project_fmri_to_surface.py  setup_tribev2.py  tribe_helpers.py
