[project]
name = "mri-analysis-yabplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dicom2nifti>=2.6.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nibabel>=5.4.0",
    "nilearn>=0.13.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyvista>=0.47.1",
    "scikit-learn>=1.8.0",
    "simpleitk>=2.5.3",
    "yabplot>=0.1.5",
]
